[package]
authors = [
    "Jonathan Reem <jonathan.reem@gmail.com>",
    "Zach Pomerantz <zmp@umich.edu>",
    "Michael Sproul <micsproul@gmail.com>",
    "Patrick Tran <patrick.tran06@gmail.com>",
]
description = "Examples for Iron web framework."
license = "MIT"
name = "examples"
version = "0.1.0"
workspace = ".."
edition = "2018"

[[bin]]
name = "404"
path = "404.rs"

[[bin]]
name = "around"
path = "around.rs"

[[bin]]
name = "content_type"
path = "content_type.rs"

[[bin]]
name = "echo"
path = "echo.rs"

[[bin]]
name = "error_recovery"
path = "error_recovery.rs"

[[bin]]
name = "error"
path = "error.rs"

[[bin]]
name = "get_set_headers"
path = "get_set_headers.rs"

[[bin]]
name = "hello_custom_config"
path = "hello_custom_config.rs"

[[bin]]
name = "hello"
path = "hello.rs"

[[bin]]
name = "helper_macros"
path = "helper_macros.rs"

[[bin]]
name = "redirect"
path = "redirect.rs"

[[bin]]
name = "simple_routing"
path = "simple_routing.rs"

[[bin]]
name = "time"
path = "time.rs"

[dependencies]
iron = { path = "../iron", version = "0.6" }
router = { path = "../router", version = "0.6" }
mount = { path = "../mount", version = "0.4" }
persistent = { path = "../persistent", version = "0.4" }
logger = { path = "../logger", version = "0.1" }
futures-cpupool = "0.1"
hyper = "0.12"
time = "0.1"
typemap = "0.3"
url = "1.7"
router = { path = "../router" }
mount = { path = "../mount" }
persistent = { path = "../persistent" }
logger = { path = "../logger" }
