[package]
authors = [
    "Jonathan Reem <jonathan.reem@gmail.com>",
    "Zach Pomerantz <zmp@umich.edu>",
    "Michael Sproul <micsproul@gmail.com>",
    "Patrick Tran <patrick.tran06@gmail.com>",
]
description = "Extensible, Concurrency Focused Web Development in Rust."
documentation = "https://docs.rs/iron"
license = "MIT"
name = "iron"
readme = "../README.md"
repository = "https://github.com/iron/iron"
version = "0.6.0"
workspace = ".."
edition = "2021"

[dependencies]
futures = "0.1"
futures-cpupool = "0.1"
http = "0.1"
hyper = "0.12"
log = "0.4"
mime = "0.3"
mime_guess = "2.0"
modifier = "0.1"
plugin = "0.2"
sxd-xpath = "0.4"
typemap = "0.3"
url = "1.7"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
ldap3 = { version = "0.11", default-features = false, features = ["sync"] }
tokio = { version = "1.28", features = ["full"] }
sqlx-core = { version = "0.8", features = ["any"] }
sxd-document = "0.3"
poem = "1.3"

[dev-dependencies]
time = "0.1"

[lib]
name = "iron"
path = "src/lib.rs"
