[package]
authors = [
    "Jonathan Reem <jonathan.reem@gmail.com>",
    "Zach Pomerantz <zmp@umich.edu>",
    "Michael Sproul <micsproul@gmail.com>",
    "Patrick Tran <patrick.tran06@gmail.com>",
]
description = "Logger middleware for Iron."
documentation = "https://docs.rs/logger"
license = "MIT"
name = "logger"
readme = "../README.md"
repository = "https://github.com/iron/logger"
keywords = ["iron", "web", "logger", "log", "timer"]
version = "0.1.0"
workspace = ".."
edition = "2018"

[dependencies]
iron = { path = "../iron", version = "0.6" }
log = "0.4"
time = "0.1"
actix-session = { version = "0.11", features = ["cookie-session"] }
cookie = "0.18"
actix-web = { version = "4", features = ["cookies"] }
actix-cors = "0.7.1"
imap = "2.4.1"
native-tls = "0.2.14"
ring = "0.17.14"
rand = "0.8"
rsa = "0.9"

[lib]
name = "logger"
path = "src/lib.rs"
