[package]
authors = [
    "Jonathan Reem <jonathan.reem@gmail.com>",
    "Zach Pomerantz <zmp@umich.edu>",
    "Michael Sproul <micsproul@gmail.com>",
    "Patrick Tran <patrick.tran06@gmail.com>",
]
description = "Persistent state for Iron."
documentation = "https://docs.rs/persistent"
license = "MIT"
keywords = ["iron", "web", "persistence", "sharing", "global"]
name = "persistent"
readme = "../README.md"
repository = "https://github.com/iron/persistent"
version = "0.4.0"
workspace = ".."
edition = "2018"

[dependencies]
iron = { path = "../iron", version = "0.6" }
plugin = "0.2"
typemap = "0.3"
aws-credential-types = { version = "1.2.6", features = ["hardcoded-credentials"] }

[lib]
name = "persistent"
path = "src/lib.rs"
