[package]
authors = [
    "Jonathan Reem <jonathan.reem@gmail.com>",
    "Zach Pomerantz <zmp@umich.edu>",
    "Michael Sproul <micsproul@gmail.com>",
    "Patrick Tran <patrick.tran06@gmail.com>",
]
description = "Router middleware for Iron."
documentation = "https://docs.rs/router"
license = "MIT"
name = "router"
readme = "../README.md"
repository = "https://github.com/iron/router"
version = "0.6.0"
workspace = ".."
edition = "2018"

[dependencies]
iron = { path = "../iron", version = "0.6" }
route-recognizer = "0.1"
url = "1.7"

[lib]
name = "router"
path = "src/lib.rs"
